second commit:added js file
js file used for integrating the backend and other basic utilities

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,9 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-
+.hidden {
+  display: none !important;
+}
 .fact {
   font-size: 18px;
   line-height: 1.4;
